cleaned up files

--- a/home.html
+++ b/home.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap Example</title>
+    <title>Jared Berman</title>
 
-    <link rel="stylesheet" type="text/css" href="/home/jared/web_dev/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="example.css">
+    <link rel="stylesheet" type="text/css" href="static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="static/styles/home.css">
     
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="/home/jared/web_dev/bootstrap/js/bootstrap.bundle.js" defer></script>
-    <script src="test.js" defer></script>
+    <script src="static/bootstrap/js/bootstrap.bundle.js" defer></script>
+    <script src="js/app.js" defer></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
@@ -72,8 +72,8 @@
             <li>5 minutes</li>
           </ol>
           <span style="font-size: 12px;">
-            (Bonus: I've also compiled a pdf giving a brief overview of git along with guides for many of the most salient utilities: difference
-            inspection, merging, branching, tagging, pull requests, and more. <a href="static/git_guide.pdf" download>View PDF</a>)</span>
+            (Bonus: I've also compiled a pdf giving a brief overview of Git along with guides for many of the most salient utilities: difference
+            inspection, merging, branching, tagging, stashing, pull requests, and more. <a href="static/git_guide.pdf" download>View PDF</a>)</span>
         </div>
         <div class="col-md-6 how-to">
           <h1>WIP</h1>
@@ -91,9 +91,3 @@
   </body>
 </html>
 
-<!-- Bootstrap is the most forked and starred repo on GitHub. All is it
-is a css and a js file (and some extra stuff to be exact) that can
-be used for styling and for actions on a page. Many many different types
-of widgets are implemented by Bootstrap. Use it as you would any open
-source api. Documentation here:
-https://getbootstrap.com/docs/4.5/components/alerts/ -->
