completed first two posts

--- a/home.html
+++ b/home.html
@@ -19,9 +19,9 @@
             <button type="button" class="btn btn-info btn-md about-me" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true"
             data-content="My interest in data science and engineering began while studying in college. I am passionate about collaborating to engineer technical
              solutions for business problems and transformations. Enthusiactic about delivering valuable products through an 
-             agile workflow, and positioning for future success by using well-documented, reproducable methodologies, 
+             agile workflow, and positioning for future success by using well-documented, reproducible methodologies, 
              following best practices, and using proper workflow and code management. <br>
-             <a href='static/resume.pdf' download>Resume</a>">
+             <a href='static/resume.pdf' id='resume' download>Resume</a>">
             About Me
             </button>
           </li>
@@ -49,7 +49,7 @@
           <small class="text-muted"> Data Scientist</small>
         </h1>
         <hr>
-        <p class="lead">My website for tech-, programming- and data science-related blogging, projects, and other neat stuff.</p>
+        <p class="lead">My website for tech-, programming- and data science-related blogging, projects, tutorials, and other neat stuff.</p>
       </div>
     </div>
 
@@ -57,17 +57,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 how-to">
-          <h1> Download, installation, and set-up of P4Merge as the default
-            diff- and merge-tool for Git. <a href="articles/p4merge.html">Read</a> 
+          <h1> How to Download, Install, and Set-up P4Merge as the Default
+            Diff- and Merge-tool for Git. <a href="articles/p4merge.html">Read</a> 
           </h1>
           <hr>
           <p>
-            Direct inspection in the terminal or a basic text editor of files marked up by git is not always optimal. Here is
+            Direct inspection in the terminal or a basic text editor of files marked up by Git is not always optimal. Here is
             a free, no-frills GUI tool to inspect differences and settle merge conflicts. <br>
           </p>
           <h6> Prerequisites </h6>
           <ol>
-            <li>Ubuntu (or a similar platform)</li>
+            <li>Ubuntu (or a similar platform but you'll have to translate some basic terminal commands)</li>
             <li>Familiarity with Git</li>
             <li>5 minutes</li>
           </ol>
@@ -76,15 +76,17 @@
             inspection, merging, branching, tagging, stashing, pull requests, and more. <a href="static/git_guide.pdf" download>View PDF</a>)</span>
         </div>
         <div class="col-md-6 how-to">
-          <h1>WIP</h1>
+          <h1>Prediction Application for Telcom Customer Churn</h1>
           <hr>
           <p>
-            -
-          </p>
-          <h6> Prerequisites </h6>
-          <ol>
-            <li>-</li>
-          </ol>
+            Based on a <a href="https://www.kaggle.com/blastchar/telco-customer-churn">Kaggle Dataset</a> describing 7043 customers of a
+            telecommunication company. Aim is to build and deploy a model to predict whether a customer is at risk for leaving the company.
+            <br><br>
+            <a href="#">Application</a> where you can try out the finished model.
+            <br><br>
+            The application was engineered using the <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> framework and 
+            deployed with <a href="https://www.heroku.com/about">Heroku</a>. Check out the code in my <a href="#">GitHub repository</a>
+          </p>                             
         </div>
       </div>
     </div>
