--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-6 how-to">
+        <div class="col-md-6 how-to shadow">
           <h1> How to Download, Install, and Set-up P4Merge as the Default
             Diff- and Merge-tool for Git. <a href="articles/p4merge.html">Read</a> 
           </h1>
@@ -75,16 +75,18 @@
             (Bonus: I've also compiled a pdf giving a brief overview of Git along with guides for many of the most salient utilities: difference
             inspection, merging, branching, tagging, stashing, pull requests, and more. <a href="static/git_guide.pdf" download>View PDF</a>)</span>
         </div>
-        <div class="col-md-6 how-to">
+        <div class="col-md-6 how-to shadow">
           <h1>Prediction Application for Telcom Customer Churn</h1>
           <hr>
           <p>
             Based on a <a href="https://www.kaggle.com/blastchar/telco-customer-churn">Kaggle Dataset</a> describing 7043 customers of a
             telecommunication company. Aim is to build and deploy a model to predict whether a customer is at risk for leaving the company.
             <br><br>
-            <a href="#">Application</a> where you can try out the finished model.
+            <a href="#">Application website</a> where you can try out the finished model.
             <br><br>
-            The application was engineered using the <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> framework and 
+            The application was engineered using the <a href="https://scikit-learn.org/stable/">Sklearn</a> machine learning framework 
+            in a <a href="https://jupyter.org/">Jupyter Notebook</a> IDE for
+            model development; <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> was used to build the API and it was 
             deployed with <a href="https://www.heroku.com/about">Heroku</a>. Check out the code in my <a href="#">GitHub repository</a>
           </p>                             
         </div>
