--- a/home.html
+++ b/home.html
@@ -80,13 +80,14 @@
           <hr>
           <p>
             Based on a <a href="https://www.kaggle.com/blastchar/telco-customer-churn">Kaggle Dataset</a> describing 7043 customers of a
-            telecommunication company. Aim is to build and deploy a model to predict whether a customer is at risk for leaving the company.
+            telecommunication company. The task is to build and deploy a model to predict whether a customer is at risk for leaving the company.
             <br><br>
-            <a href="#">Application website</a> where you can try out the finished model.
+            <span style="font-size: 16px; font-weight: bold;"><a href="#">Application website</a> where you can try out the finished model.</span> Model achieved 83% accuracy on
+            the test set (~3% higher than other models on Kaggle) with 80% recall and 65% precision.
             <br><br>
-            The application was engineered using the <a href="https://scikit-learn.org/stable/">Sklearn</a> machine learning framework 
+            The application was engineered with <a href="https://www.python.org/">Python</a> using the <a href="https://scikit-learn.org/stable/">Sklearn</a> machine learning framework 
             in a <a href="https://jupyter.org/">Jupyter Notebook</a> IDE for
-            model development; <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> was used to build the API and it was 
+            model development; <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> was used to build the web API and it was 
             deployed with <a href="https://www.heroku.com/about">Heroku</a>. Check out the code in my <a href="#">GitHub repository</a>
           </p>                             
         </div>
