--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Based on a <a href="https://www.kaggle.com/blastchar/telco-customer-churn">Kaggle Dataset</a> describing 7043 customers of a
             telecommunication company. The task is to build and deploy a model to predict whether a customer is at risk for leaving the company.
             <br><br>
-            <span style="font-size: 16px; font-weight: bold;"><a href="https://telco-customer-churn.herokuapp.com">Application website</a> where you can try out the finished model.</span> Model achieved 83% accuracy on
+            <span style="font-size: 16px; font-weight: bold;"><a href="https://telco-cust-churn.herokuapp.com">Application website</a> where you can try out the finished model.</span> Model achieved 83% accuracy on
             the test set (~3% higher than other models on Kaggle) with 80% recall and 65% precision.
             <br><br>
             The application was engineered with <a href="https://www.python.org/">Python</a> using the <a href="https://scikit-learn.org/stable/">Sklearn</a> machine learning framework 
