--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             The application was engineered with <a href="https://www.python.org/">Python</a> using the <a href="https://scikit-learn.org/stable/">Sklearn</a> machine learning framework 
             in a <a href="https://jupyter.org/">Jupyter Notebook</a> IDE for
             model development; <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> was used to build the web API and it was 
-            deployed with <a href="https://www.heroku.com/about">Heroku</a>. Check out the code in my <a href="#">GitHub repository</a>
+            deployed with <a href="https://www.heroku.com/about">Heroku</a>. Check out the code in my <a href="https://github.com/jaymberman/telco-cust-churn">GitHub repository</a>
           </p>                             
         </div>
       </div>
